<resources>
    <string-array name="array_loan_stage">
        <item>Pre-Approval</item>
    </string-array>
    <string name="app_name">Colaba</string>
    <string name="api_key">AIzaSyBzPEiQOTReBzy6W1UcIyHApPu7_5Die6w </string>
    <string name="colaba">Colaba</string>
    <string name="email">Email</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="wrong_credential">Wrong Credential</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_verification_code">Mobile Verification Code</string>
    <string name="password">Password</string>
    <string name="face_id">Face ID Login</string>
    <string name="biometric_login">Biometric Login</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="verify">VERIFY</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="continue_to">Continue</string>
    <string name="skip_this_step">Skip this step</string>
    <string name="one_minute_ago">1 minute ago</string>
    <string name="login_with_another_account">Login with another account</string>
    <string name="sign_in_with_password">Sign in with Password</string>
    <string name="send_invitation">SEND INVITATION</string>
    <string-array name="array_occupancy_type">
        <item>Primary Residence</item>
        <item>Second Home</item>
        <item>Investment Property</item>
    </string-array>
    <string-array name="array_property_type">
        <item>Single Family Property</item>
        <item>Condominium</item>
        <item>Townhouse</item>
        <item>Cooperative</item>
        <item>Manufactured Home</item>
        <item>Duplex (2 Unit)</item>
        <item>Triplex (3 Unit)</item>
        <item>Quadplex (4 Unit)</item>
    </string-array>
    <string-array name="array_property_status">
        <item>Retained</item>
        <item>Pending Sale</item>
    </string-array>
    <string name="race">Race</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="sex">Sex</string>
    <string name="add_current_address">Add Current Residence</string>
    <string name="add_previous_address">Add Previous Residence</string>
    <string name="mailing_address_added">Mailing address has been added</string>
    <string name="doc_filter_all">All</string>
    <string name="doc_filter_in_draft">In Draft</string>
    <string name="doc_filter_borrower_to_do">Borrower To Do</string>
    <string name="doc_filter_pending">Pending</string>
    <string name="doc_filter_completed">Completed</string>
    <string name="doc_filter_started">Started</string>
    <string name="doc_filter_manually_added">Manually Added</string>
    <string name="no_doc_uploaded">No documents uploaded yet</string>
    <string name="no_doc_found">No documents found</string>
    <string name="delete_prev_address">Are you sure you want to delete Richard\'s Previous Address?</string>
    <string name="delete_current_address">Are you sure you want to delete Richard\'s Current Address?</string>
    <string name="docs_top_cell">docs_top_cell</string>
    <string name="docs_search_cell">docs_search_cell</string>
    <string name="asset_top_cell">asset_top_cell</string>
    <string name="asset_middle_cell">asset_middle_cell</string>
    <string name="asset_bottom_cell">asset_bottom_cell</string>
    <string name="plus_three">+3</string>
    <string name="actions_pending">Most Actions Pending</string>
    <string name="recent_activity">Most Recent Activity (Default)</string>
    <string name="save_continue">Save &amp; Continue</string>
    <string name="primary_borrower_info">Primary Borrower Info</string>
    <string name="borrower_a_to_z">Primary Borrower Last Name (A to Z)</string>
    <string name="borrower_z_to_a">Primary Borrower Last Name (Z to A)</string>
    <string name="application">Application</string>
    <string name="documents">Documents</string>
    <string name="documents_small">documents</string>
    <string name="conversation">Conversations</string>
    <string name="archive">Archive</string>
    <string name="assets_income"> ASSETS &amp; INCOME</string>
    <string name="income">Income</string>
    <string name="real_estate_owned">Real Estate Owned</string>
    <string name="add_real_estate_owned">Add Real Estate Owned</string>
    <string name="add_subject_property">Add Subject Property</string>
    <string name="pipeline">Pipeline</string>
    <string name="assigned_to_me">Assigned to Me</string>
    <string name="assign_application_to">Assign Application To</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login credentials not verified</string>
    <string name="email_format_error">Invalid Email, Please try again…</string>
    <string name="email_empty_error"> Empty Email, Please try again…</string>
    <string name="bottom_email_error">This email and/or phone number is already associated with a contact.</string>
    <string name="password_empty_error">Password Empty, Please try again…</string>
    <string name="password_error">Invalid Password, Please try again…</string>
    <string name="password_length_error">Invalid Password, Length too short…</string>
    <string name="place_order">Place Order</string>
    <string name="test_id">test1</string>
    <string name="empty"> </string>
    <string name="send_the_borrower">Send the borrower a pre-approval letter, allowing them to place an offer on their dream home.</string>
    <string name="ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate eros odio, elementum ultrices magna ornare eu.</string>
    <string name="in_what_state">In what state was this relationship formed?</string>
    <string name="was_richard">Was he ever activated during their tour of duty?</string>
    <string name="last_date_of_service">Last date of service / tour</string>
    <string name="set_letter_ondemand">Set Letter On-Demand</string>
    <string name="letter_on_demand_text">Allow borrowers to generate their own pre-approval letters after setting loan limits below</string>
    <string name="max_loan_amount">Max Loan Amount</string>
    <string name="max_down_payment">Max Down Payment</string>
    <string name="max_expiry_date">Max Expiration Date (MM/DD/YYYY)</string>
    <string name="max_purchase_price">Max Purchase Price</string>
    <string name="test_password">123</string>
    <string name="test_cell">test_cell</string>
    <string name="good_morning"> Good Morning </string>
    <string name="dashboard"> DashBoard Screen </string>
    <string name="user_name"> Jonny Leo </string>
    <string name="dummy_phone_num">(458) 458-8789</string>
    <string name="dummy_email">jsmith@example.com</string>
    <string name="dummy_minute">08</string>
    <string name="dummy_seconds">:  30</string>
    <string name="good_evening_james">James</string>
    <string name="current_residence">Current Residence</string>
    <string name="previous_residence">Previous Residence</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="purchase">Purchase</string>
    <string name="user_data_does_not_exit">Invalid email or password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="forgot_password">Forgot your password?  </string>
    <string name="login_to_lender_portal">Login To Lender\’s Portal </string>
    <string name="did_not_receive_code">Didn\'t receive the code? </string>
    <string name="resend_code">Resend code </string>
    <string name="max_resend_attempts_reached">Max resend attempts reached. Please try again after some time</string>
    <string name="dummy_ok_message">You need to complete the timeout. and then move on to the next screen which is dashboard</string>
    <string name="dummy_otp_message">You need to complete the timeout.</string>
    <string name="biometric_check">Device is not registered with Biometric login. Please setup it from settings.</string>
    <string name="biometric_check_two">Please setup Biometric from settings.</string>
    <string name="authenticate_with_biometric">Authenticate with Biometric</string>
    <string name="user_your_biometric">Use your biometric to login to Colaba Mobile</string>
    <string name="do_not_ask_again"> Don\'t ask again on this device. </string>
    <string name="password_assistance">Password Assistance </string>
    <string name="enter_your_email">Enter your email to reset your password. </string>
    <string name="almost_finished"> Almost Finished </string>
    <string name="go_back_to_login">GO BACK TO LOGIN</string>
    <string name="we_have_send_you_email">We\'ve sent you an email with instructions <br /> to create a new password </string>
    <string name="phone_number_verification">Phone Number Verification </string>
    <string name="enter_the_code_sent_to">Enter the code sent to (***) ***-7787 </string>
    <string name="enter_your_phone_number">Enter your phone number below and we\'ll \n send you a verification code. </string>
    <string name="webservice_error">Webservice Error </string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="pdf_view">Pdf View</string>
    <string name="image_view">Image View</string>
    <string name="loan_info_purchase">Purchase Loan Information</string>
    <string name="loan_info_refinance">Refinance Loan Information</string>
    <string name="married_to_coborower">Are you married to a co-borrower?</string>
    <string name="coborower_legal_spouse">Is Co-borrower your legal Spouse?</string>
    <string name="request_docs">Request Document</string>
    <string name="assets">Assets</string>
    <string name="street_address">Street Address</string>
    <string name="unit_or_apt">Unit Or Apt. Number (Optional)</string>
    <string name="city">City</string>
    <string name="relationship_details"> Relationship Details</string>
    <string name="county">County</string>
    <string name="state">State</string>
    <string name="type_of_relations">Types of Relationship</string>
    <string name="search_mailing_address">Search Mailing Address</string>
    <string name="search_home_address">Search Home Address</string>
    <string name="search_prev_home_address">Search Previous Home Address</string>
    <string name="search_main_address">Search Main Address</string>
    <string name="search_business_address">Search Business Address</string>
    <string name="search_service_location_address">Search Service Location Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="temp_address">4101  Oak Tree Avenue  LN # 222,\nChicago, MD 60605</string>
    <string name="housing_status">Housing Status</string>
    <string name="unmarried_addendum">Unmarried Addendum</string>
    <string name="citizenship">Citizenship</string>
    <string name="us_citizen">US Citizen</string>
    <string name="pr_green_card">Permanent Resident Alien (Green Card)</string>
    <string name="non_pr">Non Permanent Resident Alien</string>
    <string name="visa_status">Visa Status</string>
    <string name="others">Others</string>
    <string name="active_duty_personel">Active Duty Personnel</string>
    <string name="subject_property">Subject Property</string>
    <string name="subject_property_address">Subject Property Address</string>
    <string name="mixed_use_property">Mixed Use Property</string>
    <string name="first_mortgage">First Mortgage</string>
    <string name="sec_mortgage">Second Mortgage</string>
</resources>